# LearnWebGPU

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
WebGPUlib/: CMakeLists.txt
WebGPUlib/inc/: bitmask_operators.hpp
WebGPUlib/inc/WebGPUlib/: BindGroup.hpp  Buffer.hpp  CommandBuffer.hpp  ComputeCommandBuffer.hpp  ComputePipelineState.hpp  Defines.hpp  Device.hpp  GenerateMipsPipelineState.hpp  GraphicsCommandBuffer.hpp  GraphicsPipelineState.hpp  Hash.hpp  Helpers.hpp  IndexBuffer.hpp  Material.hpp  Mesh.hpp  Queue.hpp  RenderTarget.hpp  Sampler.hpp  Scene.hpp  SceneNode.hpp  StorageBuffer.hpp  Surface.hpp  Texture.hpp  TextureUnlitPipelineState.hpp  TextureView.hpp  UniformBuffer.hpp  UploadBuffer.hpp  Vertex.hpp  VertexBuffer.hpp
WebGPUlib/shaders/: GenerateMips.wgsl  TextureUnlitShader.wgsl
WebGPUlib/src/: BindGroup.cpp  Buffer.cpp  CommandBuffer.cpp  ComputeCommandBuffer.cpp  ComputePipelineState.cpp  Device.cpp  GenerateMipsPipelineState.cpp  GraphicsCommandBuffer.cpp  GraphicsPipelineState.cpp  IndexBuffer.cpp  Material.cpp  Mesh.cpp  Queue.cpp  RenderTarget.cpp  Sampler.cpp  Scene.cpp  SceneNode.cpp  StorageBuffer.cpp  Surface.cpp  Texture.cpp  TextureUnlitPipelineState.cpp  TextureView.cpp  UniformBuffer.cpp  UploadBuffer.cpp  Vertex.cpp  VertexBuffer.cpp
WebGPUlib/src/shaders/: TextureUnlitShader.wgsl
samples/: CMakeLists.txt
samples/00-Common/: CMakeLists.txt
samples/00-Common/inc/: Camera.hpp  CameraController.hpp  GamePad.hpp  Keyboard.hpp  Mouse.hpp  Texture.hpp  Timer.hpp
samples/00-Common/src/: Camera.cpp  CameraController.cpp  GamePad.cpp  Keyboard.cpp  Mouse.cpp  Timer.cpp
samples/01-ClearScreen/: CMakeLists.txt  main.cpp
samples/02-Cube/: CMakeLists.txt  main.cpp  shader.wgsl
samples/03-Mesh/: CMakeLists.txt  main.cpp  shader.wgsl
samples/03-Texture/: CMakeLists.txt  generateMips.wgsl  main.cpp  shader.wgsl
samples/04-Mesh/: CMakeLists.txt  Light.hpp  Matrices.hpp  TextureLitPipelineState.cpp  TextureLitPipelineState.hpp  TextureLitShader.wgsl  TextureUnlitPipelineState.cpp  TextureUnlitPipelineState.hpp  TextureUnlitShader.wgsl  main.cpp  shader.wgsl
samples/05-Masterclass/: CMakeLists.txt  main.cpp
samples/assets/crytek-sponza/: .gitattributes  sponza.mtl  sponza_nobanner.assbin
step000/: CMakeLists.txt  main.cpp
step001/: CMakeLists.txt  main.cpp
step005/: CMakeLists.txt  main.cpp
step010/: CMakeLists.txt  main.cpp
